# abcmint

./: .gitignore  .gitmodules  CMakeLists.txt  build-cpu.sh  build-deps.sh  build.sh
cmake/Hunter/: config.cmake
src/: makefile.unix
src/test/: asmMinerTest.cpp
